# ESP32-mcp2515

./: .gitignore  ARDUINO_IDE_COMPATIBILITY.md  BUILD_VERIFICATION_REPORT.md  CLAUDE.md  CMakeLists.txt  CODE_ANALYSIS.md  CRITICAL_BUGS_FOUND.md  CRITICAL_BUGS_ROUND_3.md  DEVELOPMENT_WORKFLOW.md  Kconfig  LICENSE.md  RELEASE_NOTES_v2.1.1.md  TEST_VERIFICATION_ANALYSIS.md  keywords.txt  library.properties  mcp2515.cpp  mcp2515.h  mcp2515_esp32_config.h  platformio.ini  read_serial.py
Documentation/: ABORT_TRANSMISSIONS_BUG_FIX.md  API_DATASHEET_VALIDATION.md  API_REFERENCE.md  API_VALIDATION_REPORT.md  AUDIT_SUMMARY.md  CRITICAL_BUGS_FIX_2025-11-17.md  DATASHEET_COMPLIANCE_ANALYSIS.md  EMBEDDED_SYSTEMS_AUDIT.md  ESP32_COMPREHENSIVE_AUDIT_2025-11-15.md  ESP32_COMPREHENSIVE_AUDIT_2025-11-15_v2.md  ESP32_COMPREHENSIVE_AUDIT_2025-11-17.md  ESP32_COMPREHENSIVE_AUDIT_2025-11-17_FINAL.md  ESP32_COMPREHENSIVE_AUDIT_2025-11-25.md  ESP32_COMPREHENSIVE_AUDIT_PHASE9_2025-11-18.md  ESP32_CRASH_FIX_2025-11-17.md  FUNCTION_BY_FUNCTION_DATASHEET_VERIFICATION.md  INTERRUPT_MODE_FIX_2025-11-17.md  LOOPBACK_MODE_INTERRUPT_FIX_2025-11-17.md  LOOPBACK_TEST_ANALYSIS.md  LOOPBACK_TEST_COMPREHENSIVE_ANALYSIS.md  MCP2515.md  PLATFORMIO_BUILD_REPORT.md  PLATFORMIO_BUILD_TESTING_GUIDE.md  PLATFORMIO_TESTING_METHODOLOGY.md  PRODUCTION_CRITICAL_FIXES_2025-11-15.md  READMESSAGE_INFINITE_LOOP_FIX.md  README_ESP32.md  TEST_FAILURE_FIX_2025-11-17.md  TEST_METHODOLOGY_FIX_2025-11-17.md  TEST_SUITE_ANALYSIS.md  TEST_VERIFICATION_ANALYSIS.md
Tests/: CANTestLoopback-1000KBPS.txt  CANTestLoopback-125KBPS.txt  (+4 more)
(+26 files in other folders)
